fixed disalignment of logo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,9 @@ a {
     color-scheme: dark;
   }
 }
-
+.zipv{
+  visibility: hidden;
+}
 .zip{
   z-index: 9999;
 }
