--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -99,6 +99,7 @@
   top: 0;
   bottom: 0;
   margin: auto;
+  z-index: 1;
 }
 
 .logo {
